PLF-1445 Max's patch: JCR 1.14-CR2-SNAPSHOT, Cloud updates for Alpha09