@@ -28,12 +28,20 @@ cd `dirname "$0"`
 LOG_OPTS="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog"
 SECURITY_OPTS="-Djava.security.auth.login.config=../conf/jaas.conf"
 EXO_OPTS="-Dexo.product.developing=false -Dexo.conf.dir.name=gatein/conf"
+
+JMX_OPTS="-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6969 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false"
+EXO_OPTS="-Dexo.product.developing=false -Dexo.conf.dir.name=gatein/conf"
+EXO_CLOUD_OPTS="-javaagent:../lib/cloud-instrument-1.0-Alpha09-SNAPSHOT.jar=../gatein/conf/cloud/agent-configuration.xml \
+		-Dtenant.masterhost=localhost \
+		-Dtenant.repository.name=repository \
+		-Dtenant.jcr.data.dir=../gatein/data/jcr"
+EXO_CLOUD_SECURITY_OPTS="-Djava.security.manager=org.exoplatform.cloudmanagement.security.TenantSecurityManager -Djava.security.policy==../conf/catalina.policy"
+
 if [ "$EXO_PROFILES" = "" ] ; then 
-	EXO_PROFILES="-Dexo.profiles=default"
+	EXO_PROFILES="-Dexo.profiles=default,cloud"
 fi
 
-
-JAVA_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=256m $JAVA_OPTS $LOG_OPTS $SECURITY_OPTS $EXO_OPTS $EXO_PROFILES"
+JAVA_OPTS="-Xms512m -Xmx2g -XX:MaxPermSize=256m $JAVA_OPTS $LOG_OPTS $SECURITY_OPTS $EXO_OPTS $EXO_PROFILES $EXO_CLOUD_SECURITY_OPTS $EXO_CLOUD_OPTS $JMX_OPTS"
 export JAVA_OPTS
 
 # Launches the server
